welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: value ROUGE is not a member of object java.awt.Color
override def run(){Motif(Color.ROUGE)}
                               ^