welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run(){Motif(Color.ROUGE)}
 

  
def Motif(c:Color){
  setCouleurBrosse(c)
  avance()
  brosse()
  gauche()
  avance()
  gauche()
  avance()
  brosse()
  gauche()
  avance()
  gauche()
  avance(3)
  gauche()
}  
  
def brosse(){
  baisseBrosse()
  leveBrosse()
}